# AlienInvasion

./: README.md  alien.py  alien_invasion.py  bullet.py  conftest.py  pyproject.toml  requirements.txt  settings.py  ship.py  test_alien.py  test_alien_invasion.py  test_bullet.py  test_settings.py  test_ship.py
.github/workflows/: python-app.yml
alien_invasion/: __init__.py  __main__.py  game.py  paths.py  settings.py
alien_invasion/sprites/: __init__.py  alien.py  bullet.py  ship.py
tests/: conftest.py  test_alien.py  test_bullet.py  test_game.py  test_settings.py  test_ship.py
